--- a/carviewer.html
+++ b/carviewer.html
@@ -31,6 +31,22 @@
                     <th><button>Update</button></th>
                     <th><button>Delete</button></th>
                 </tr>
+                <tr>
+                    <th>12 D 123</th>
+                    <th>Fiat</th>
+                    <th>Punto</th>
+                    <th>4000</th>
+                    <th><button>Update</button></th>
+                    <th><button>Delete</button></th>
+                </tr>
+                <tr>
+                    <th>08 G 123</th>
+                    <th>Nissan</th>
+                    <th>Almera</th>
+                    <th>500</th>
+                    <th><button>Update</button></th>
+                    <th><button>Delete</button></th>
+                </tr>
             </table>
 
         </div>
