--- a/lab2.html
+++ b/lab2.html
@@ -131,6 +131,24 @@ function doDelete(r){
     tableElement.deleteRow(index);
 }
 
+function addCarToTable(car){
+    var tableElement = document.GetElementById('carTable')
+    var rowElement = tableElement.insertRow(-1)
+    rowElement.setAttribute('id' car.reg)
+    var cell1 = rowElement.insertCell(0);
+    cell1.innerHTML = car.reg
+    var cell2 = rowElement.insertCell(1);
+    cell2.innerHTML = car.make
+    var cell3 = rowElement.insertCell(2);
+    cell3.innerHTML = car.model
+    var cell4 = rowElement.insertCell(3);
+    cell4.innerHTML = car.price
+    var cell5 = rowElement.insertCell(4);
+    cell5.innerHTML = '<button onclick="showUpdate(this)">Update</button>'
+    var cell6 = rowElement.insertCell(5);
+    cell6.innerHTML = '<button onclick="doDelete(this)">Delete</button>'
+
+}
 </script>
 
 </html>
