--- a/lab2.html
+++ b/lab2.html
@@ -51,16 +51,16 @@
         </div>
         <div id = 'createUpdateForm' style = "display:none">
             <h2><span id = "createLabel">Create a</span> <span id = "updateLabel">Update this</span> Car</h2>
-            Reg <input type = "text" name = "Reg"><br/>
-            Make <select name = "Make">
+            Reg <input type = "text" name = "reg"/> <br/>
+            Make <select name = "make">
                     <option value = "Ford">Ford</option>
                     <option value = "Fiat">Fiat</option>
                     <option value = "Nissan">Nissan</option>
             </select><br/>
-            Model <input type="text" name="model"><br/>
-            Price <input type="number" name="price"><br/>
-            <span><button>Create</button></span>
-            <span><button>Update</button></span>
+            Model <input type="text" name="model"/><br/>
+            Price <input type="number" name="price"/><br/>
+            <span><button id = "doCreateButton" onclick="doCreate()">Create</button></span>
+            <span><button id = "doUpdateButton" onclick="doUpdate()">Update</button></span>
 
         </div>
     </body>
