syntax errors fixed

--- a/lab2.html
+++ b/lab2.html
@@ -152,9 +152,9 @@ function clearForm(){
     var form = document.getElementById('createUpdateForm')
     form.querySelector('input[name="reg"]').disabled = false
     form.querySelector('input[name="reg"]').value = ''
-    form.querySelector('select[name="make"])'.value = ''
+    form.querySelector('select[name="make"]').value = ''
     form.querySelector('input[name="model"]').value = ''
-    form.querySelector('input[name="price"]'.).value=''
+    form.querySelector('input[name="price"]').value=''
 
 }
 function getCarFromRow(rowElement){
