Added config file

--- a/project/stockviewer.html
+++ b/project/stockviewer.html
@@ -70,7 +70,7 @@
         stock.label = form.querySelector('input[name="label"]').value
         stock.price = form.querySelector('input[name="price"]').value
         console.log(JSON.stringify(stock))
-        createBookAjax(stock)
+        createStockAjax(stock)
         
         
     }
