--- a/project/stockviewer.html
+++ b/project/stockviewer.html
@@ -5,7 +5,7 @@
        
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
-    <body bgcolor='blue'>
+    <body background_colour='blue'>
         <h1>Stock</h1>
         <div> <button id="showCreateButton" onclick="showCreate()">Create</button></div>
         <div>
