--- a/project/stockviewer.html
+++ b/project/stockviewer.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <h1>Stock</h1>
-        <div> <button id="showCreateButton" onclick="showCreate()">Create</button></div>
+        <div> <button id="showCreateButton" onclick="showCreate()">Add New Item</button></div>
         <div>
-            <table class="table" id="stockTable">
+            <table class="table" id="stockTable" border="2">
                 <tr>
                         <th>id</th>
                         <th>itemtype</th>
