trying to change style

--- a/project/stockviewer.html
+++ b/project/stockviewer.html
@@ -23,7 +23,7 @@
                 
             </table>
         </div>
-        <div id='createUpdateForm' style="display: none">
+        <div id='createUpdateForm' style="display: none", border="2">
                 <h2><span id="createLabel">Create new stock item</span> <span id="updateLabel">update</span> </h2>
                 <input type="hidden" name="id"/>
                 Item Type <input type="text" name="itemtype" /><br/>
