--- a/project/stockviewer.html
+++ b/project/stockviewer.html
@@ -4,12 +4,19 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
        
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <style>
+            table, th, td {
+            padding: 10px;
+            border: 1px solid black; 
+            border-collapse: collapse;
+            }
+          </style>
     </head>
     <body>
         <h1>Stock</h1>
         <div> <button id="showCreateButton" onclick="showCreate()">Add New Item</button></div>
         <div>
-            <table class="table" id="stockTable" border="2">
+            <table class="table" id="stockTable">
                 <tr>
                         <th>id</th>
                         <th>itemtype</th>
@@ -23,7 +30,7 @@
                 
             </table>
         </div>
-        <div id='createUpdateForm' style="display: none", border="2">
+        <div id='createUpdateForm' style="display: none">
                 <h2><span id="createLabel">Create new stock item</span> <span id="updateLabel">update</span> </h2>
                 <input type="hidden" name="id"/>
                 Item Type <input type="text" name="itemtype" /><br/>
