--- a/project/stockviewer.html
+++ b/project/stockviewer.html
@@ -4,19 +4,13 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
        
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <style>
-            table, th, td {
-            padding: 10px;
-            border: 1px solid black; 
-            border-collapse: collapse;
-            }
-          </style>
+        
     </head>
     <body>
         <h1>Stock</h1>
         <div> <button id="showCreateButton" onclick="showCreate()">Add New Item</button></div>
         <div>
-            <table class="table" id="stockTable">
+            <table class="table table-bordered" id="stockTable">
                 <tr>
                         <th>id</th>
                         <th>itemtype</th>
