--- a/project/stockviewer.html
+++ b/project/stockviewer.html
@@ -7,7 +7,7 @@
         
     </head>
     <body>
-        <h1>Stock</h1>
+        <h1>Current Items in Stock</h1>
         <div> <button id="showCreateButton" onclick="showCreate()">Add New Item</button></div>
         <div>
             <table class="table table-bordered" id="stockTable">
