--- a/project/stockviewer.html
+++ b/project/stockviewer.html
@@ -30,7 +30,7 @@
                 Item Type <input type="text" name="itemtype" /><br/>
                 Label <input type="text" name="label"/> <br/>
                 Price <input type="number" name="price"/> <br/>
-                <span><button id="doCreateButton" onclick="doCreate()">Create</button></span>
+                <span><button id="doCreateButton" onclick="doCreate()">Add New Item</button></span>
                 <span><button id="doUpdateButton" onclick="doUpdate()">Update</button></span>
         </div>
     </body>
