added header to pg 2

--- a/project/stockviewer.html
+++ b/project/stockviewer.html
@@ -7,6 +7,7 @@
         
     </head>
     <body>
+        <img src="templates/header3.jpg" alt="Header" width="1332">
         <h1>Current Items in Stock</h1>
         <div> <button id="showCreateButton" onclick="showCreate()">Add New Item</button></div>
         <div>
