--- a/project/stafflogin.html
+++ b/project/stafflogin.html
@@ -6,7 +6,7 @@
   </head>
   <body>
       <div class="login">
-          <h1>Login</h1>
+          <h1>Staff Login</h1>
           <div >
             <a href="{{ url_for('login') }}" class="active">Login</a>
             <a href="#">Register</a>
