--- a/project/stafflogin.html
+++ b/project/stafflogin.html
@@ -21,7 +21,7 @@
             </label>
             <input type="password" name="password" placeholder="Password" id="password" required>
             
-            <input type="submit" value="Login">
+            <input type="submit" value="login">
           </form>
         </div>
   </body>
