--- a/project/stafflogin.html
+++ b/project/stafflogin.html
@@ -8,10 +8,10 @@
       <div class="login">
           <h1>Staff Login</h1>
           <div >
-            <a href="{{ url_for('login') }}" class="active">Login</a>
+            <a href="{{ url_for('stafflogin') }}" class="active">Login</a>
             <a href="#">Register</a>
           </div>
-          <form action="{{ url_for('login') }}" method="post">
+          <form action="{{ url_for('stafflogin') }}" method="post">
             <label for="username">
               
             </label>
