--- a/project/stafflogin.html
+++ b/project/stafflogin.html
@@ -6,7 +6,7 @@
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
-		<div >
+		<div class = "container" >
 			<h1>Login</h1>
 			<div >
 				<a href="{{ url_for('login') }}" class="active">Login</a>
