--- a/project/stafflogin.html
+++ b/project/stafflogin.html
@@ -9,8 +9,8 @@
 		<div class = "container bg-info text-white" >
 			<h1>Login</h1>
 			<div >
-				<a href="{{ url_for('login') }}" class="active">Login</a>
-				<a href="#">Register</a>
+				<a href="{{ url_for('login') }}" class="active"></a>
+				
 			</div>
 			<form action="{{ url_for('login') }}" method="post">
 				<label for="username">
