--- a/project/stafflogin.html
+++ b/project/stafflogin.html
@@ -11,7 +11,7 @@
 			<div class = "container bg-info text-white">
 				
 				<a href="{{ url_for('stafflogin') }}">Login</a>
-				<a href="{{ url_for('register') }}" >Register</a>
+				<a href="/register.html">Register</a>
 				
 			</div>
 			<form action="{{ url_for('stafflogin') }}" method="post">
