--- a/project/register.html
+++ b/project/register.html
@@ -5,9 +5,9 @@
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
-		<div class = "container bg-info text-white" >
+		<div class = "container bg-info text-black" >
 			<h1>Register</h1>
-			    <a href="{{ url_for('login') }}">Login</a>
+			    <a href="/stafflogin.html">Login</a>
 				<a href="{{ url_for('register') }}" >Register</a>
 			</div>
 			<form action="{{ url_for('register') }}" method="post" autocomplete="off">
