--- a/project/stafflogin.html
+++ b/project/stafflogin.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class = "container bg-info text-white" >
 			<h1>Login</h1>
-			<div class = "container bg-info text-white">
+			<div class = "container bg-info text-black">
 				
 				<a href="{{ url_for('stafflogin') }}">Login</a>
 				<a href="/register.html">Register</a>
