--- a/project/register.html
+++ b/project/register.html
@@ -7,8 +7,8 @@
 	<body>
 		<div class = "container bg-info text-white" >
 			<h1>Register</h1>
-			    <a href="/stafflogin.html" class="text-light bg-dark">Login</a>
-				<a href="{{ url_for('register') }}"class="text-light bg-dark">Register</a>
+			    <a href="/stafflogin.html" class="text-dark bg-light">Login</a>
+				<a href="{{ url_for('register') }}"class="text-dark bg-light">Register</a>
 			</div>
 			<form action="{{ url_for('register') }}" method="post" autocomplete="off">
 				<label for="username">
