--- a/project/stafflogin.html
+++ b/project/stafflogin.html
@@ -10,8 +10,8 @@
 			<h1>Login</h1>
 			<div class = "container bg-info text-black">
 				
-				<a href="{{ url_for('stafflogin') }}">Login</a>
-				<a href="/register.html">Register</a>
+				<a href="{{ url_for('stafflogin') }}" class="text-dark bg-light">Login</a>
+				<a href="/register.html" class="text-dark bg-light">Register</a>
 				
 			</div>
 			<form action="{{ url_for('stafflogin') }}" method="post">
